# agnodemo

./: README.md  debug_logs.py  level_1_agent.py  level_2_agent.py  level_3_agent.py  level_4_team.py  level_5_workflow.py  main.py  monitoring.py  playground.py  pyproject.toml  test_DDGS.py  try_deepseek.py  try_gemini.py  try_gemini_way2.py  try_openai.py  try_qwen.py  数据收集层.xmind  舆情监控平台说明.md
crawler/: sentiment_monitor.py  xueqiu_crawler_fixed.py
crawler/logs/: eastmoney_news.csv  eastmoney_news_002594.csv  eastmoney_news_300474.csv  eastmoney_news_600036.csv
fundamental/: README.md  debug_szse_structure.py  financial_reports.py  sse_crawler.py  szse_crawler - 副本.py  szse_crawler.py
public_opinion/: __init__.py  eastmoney_crawler.py  logger_config.py  xueqiu_crawler.py
tmp/: agent.db  agents.db
tmp/lancedb/agno_docs.lance/_indices/fts/: .managed.json  meta.json
tmp/lancedb/agno_docs.lance/_transactions/: 0-8eceb3ee-ef1d-47ff-b984-f62f873be4b3.txn  1-b1f6365b-d5b9-4b46-9e95-a295498fbe80.txn  2-ccdf0488-c6b8-412e-9e7f-425075eea702.txn
tmp/lancedb/agno_docs.lance/_versions/: 1.manifest  2.manifest  3.manifest
tmp/lancedb/agno_docs.lance/data/: bf8b8a80-1ed1-4793-a900-df7b721c0e22.lance  cfcbfbe7-5ca5-4ab5-a6a0-9f28fe07969f.lance
