[project]
name = "agnodemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.0",
    "anthropic>=0.56.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=8.0.5",
    "fastapi>=0.115.14",
    "google-genai>=1.24.0",
    "lancedb>=0.24.0",
    "openai>=1.93.0",
    "pandas>=2.0.0",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "pylance>=0.30.0",
    "selenium>=4.34.0",
    "sqlalchemy>=2.0.41",
    "tantivy>=0.24.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
